# Elasticsearch-RAG

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/services/: rag_service.py
