[tool.poetry]
name = "elasticsearch-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.27"
langchain-google-genai = "^2.1.10"
sentence-transformers = "^5.1.0"
langchain-elasticsearch = "^0.3.2"
pypdf = "^6.0.0"
langchain-community = "^0.3.29"
elasticsearch = "<9.0.0"
langchain-core = "^0.3.75"
langchain-huggingface = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
